// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Autocomplete controlled mode value is set 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-labelledby="downshift-29-label"
      aria-owns="downshift-29-menu"
      class="Autocomplete-root Autocomplete-rootAuto"
      role="combobox"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root Input-root OutlinedInput-rootAuto"
      >
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
        <input
          aria-autocomplete="list"
          aria-controls="downshift-29-menu"
          aria-labelledby="downshift-29-label"
          autocomplete="off"
          class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input Input-input"
          id="downshift-29-input"
          placeholder="Croatia"
          type="text"
          value="Belarus"
        />
      </div>
      <div
        aria-labelledby="downshift-29-label"
        id="downshift-29-menu"
        role="listbox"
      >
        <ul
          class="MuiList-root ScrollMenu-menu"
          role="menu"
          tabindex="-1"
        >
          <div
            class="ScrollMenu-scrollView"
          >
            <li
              aria-disabled="false"
              aria-selected="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              id="downshift-29-item-0"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Belarus
              </p>
            </li>
          </div>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Autocomplete dynamic behavior On "Backspace" key pressed with empty text 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-19-label"
      class="Autocomplete-root Autocomplete-rootAuto"
      role="combobox"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root Input-root OutlinedInput-rootAuto"
      >
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
        <input
          aria-autocomplete="list"
          aria-labelledby="downshift-19-label"
          autocomplete="off"
          class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input Input-input"
          id="downshift-19-input"
          placeholder="Placeholder text"
          type="text"
          value=""
        />
      </div>
      <div
        aria-labelledby="downshift-19-label"
        id="downshift-19-menu"
        role="listbox"
      />
    </div>
  </div>
</div>
`;

exports[`Autocomplete dynamic behavior On "arrow up/down" key press Enter 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-25-label"
      class="Autocomplete-root Autocomplete-rootAuto"
      role="combobox"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root Input-root OutlinedInput-rootAuto"
      >
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
        <input
          aria-autocomplete="list"
          aria-labelledby="downshift-25-label"
          autocomplete="off"
          class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input Input-input"
          id="downshift-25-input"
          placeholder="Croatia"
          type="text"
          value="Croatia"
        />
      </div>
      <div
        aria-labelledby="downshift-25-label"
        id="downshift-25-menu"
        role="listbox"
      />
    </div>
  </div>
</div>
`;

exports[`Autocomplete dynamic behavior On "arrow up/down" key press down 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-labelledby="downshift-21-label"
      aria-owns="downshift-21-menu"
      class="Autocomplete-root Autocomplete-rootAuto"
      role="combobox"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root Input-root OutlinedInput-rootAuto"
      >
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
        <input
          aria-activedescendant="downshift-21-item-3"
          aria-autocomplete="list"
          aria-controls="downshift-21-menu"
          aria-labelledby="downshift-21-label"
          autocomplete="off"
          class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input Input-input"
          id="downshift-21-input"
          placeholder="Lithuania"
          type="text"
          value=""
        />
      </div>
      <div
        aria-labelledby="downshift-21-label"
        id="downshift-21-menu"
        role="listbox"
      >
        <ul
          class="MuiList-root ScrollMenu-menu"
          role="menu"
          tabindex="-1"
        >
          <div
            class="ScrollMenu-scrollView"
          >
            <li
              aria-disabled="false"
              aria-selected="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              id="downshift-21-item-0"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Belarus
              </p>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              id="downshift-21-item-1"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Croatia
              </p>
            </li>
            <li
              aria-disabled="true"
              aria-selected="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters Mui-disabled MuiListItem-button Mui-disabled"
              id="downshift-21-item-2"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Lithuania
              </p>
            </li>
            <li
              aria-disabled="false"
              aria-selected="true"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light Mui-selected MenuItem-selected MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button Mui-selected"
              id="downshift-21-item-3"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Slovakia
              </p>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              id="downshift-21-item-4"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Ukraine
              </p>
            </li>
          </div>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Autocomplete dynamic behavior On "arrow up/down" key press navigate after option selected 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-labelledby="downshift-27-label"
      aria-owns="downshift-27-menu"
      class="Autocomplete-root Autocomplete-rootAuto"
      role="combobox"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root Input-root OutlinedInput-rootAuto"
      >
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
        <input
          aria-activedescendant="downshift-27-item-0"
          aria-autocomplete="list"
          aria-controls="downshift-27-menu"
          aria-labelledby="downshift-27-label"
          autocomplete="off"
          class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input Input-input"
          id="downshift-27-input"
          placeholder="Croatia"
          type="text"
          value=""
        />
      </div>
      <div
        aria-labelledby="downshift-27-label"
        id="downshift-27-menu"
        role="listbox"
      >
        <ul
          class="MuiList-root ScrollMenu-menu"
          role="menu"
          tabindex="-1"
        >
          <div
            class="ScrollMenu-scrollView"
          >
            <li
              aria-disabled="false"
              aria-selected="true"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light Mui-selected MenuItem-selected MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button Mui-selected"
              id="downshift-27-item-0"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Belarus
              </p>
            </li>
            <li
              aria-disabled="true"
              aria-selected="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters Mui-disabled MuiListItem-button Mui-disabled"
              id="downshift-27-item-1"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Croatia
              </p>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              id="downshift-27-item-2"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Lithuania
              </p>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              id="downshift-27-item-3"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Slovakia
              </p>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              id="downshift-27-item-4"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Ukraine
              </p>
            </li>
          </div>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Autocomplete dynamic behavior On "arrow up/down" key press up 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-labelledby="downshift-23-label"
      aria-owns="downshift-23-menu"
      class="Autocomplete-root Autocomplete-rootAuto"
      role="combobox"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root Input-root OutlinedInput-rootAuto"
      >
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
        <input
          aria-activedescendant="downshift-23-item-1"
          aria-autocomplete="list"
          aria-controls="downshift-23-menu"
          aria-labelledby="downshift-23-label"
          autocomplete="off"
          class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input Input-input"
          id="downshift-23-input"
          placeholder="Lithuania"
          type="text"
          value=""
        />
      </div>
      <div
        aria-labelledby="downshift-23-label"
        id="downshift-23-menu"
        role="listbox"
      >
        <ul
          class="MuiList-root ScrollMenu-menu"
          role="menu"
          tabindex="-1"
        >
          <div
            class="ScrollMenu-scrollView"
          >
            <li
              aria-disabled="false"
              aria-selected="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              id="downshift-23-item-0"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Belarus
              </p>
            </li>
            <li
              aria-disabled="false"
              aria-selected="true"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light Mui-selected MenuItem-selected MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button Mui-selected"
              id="downshift-23-item-1"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Croatia
              </p>
            </li>
            <li
              aria-disabled="true"
              aria-selected="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters Mui-disabled MuiListItem-button Mui-disabled"
              id="downshift-23-item-2"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Lithuania
              </p>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              id="downshift-23-item-3"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Slovakia
              </p>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              id="downshift-23-item-4"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Ukraine
              </p>
            </li>
          </div>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Autocomplete dynamic behavior on "Esc" key pressed 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-17-label"
      class="Autocomplete-root Autocomplete-rootAuto"
      role="combobox"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root Input-root OutlinedInput-rootAuto"
      >
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
        <input
          aria-autocomplete="list"
          aria-labelledby="downshift-17-label"
          autocomplete="off"
          class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input Input-input"
          id="downshift-17-input"
          placeholder="Placeholder text"
          type="text"
          value=""
        />
      </div>
      <div
        aria-labelledby="downshift-17-label"
        id="downshift-17-menu"
        role="listbox"
      />
    </div>
  </div>
</div>
`;

exports[`Autocomplete dynamic behavior on blur on select option 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-11-label"
      class="Autocomplete-root Autocomplete-rootAuto"
      role="combobox"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root Input-root OutlinedInput-rootAuto"
      >
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
        <input
          aria-autocomplete="list"
          aria-labelledby="downshift-11-label"
          autocomplete="off"
          class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input Input-input"
          id="downshift-11-input"
          placeholder="Slovakia"
          type="text"
          value="Slovakia"
        />
      </div>
      <div
        aria-labelledby="downshift-11-label"
        id="downshift-11-menu"
        role="listbox"
      />
    </div>
  </div>
</div>
`;

exports[`Autocomplete dynamic behavior on blur preselected option and random text entered when allowAny=false 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-15-label"
      class="Autocomplete-root Autocomplete-rootAuto"
      role="combobox"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root Input-root OutlinedInput-rootAuto"
      >
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
        <input
          aria-autocomplete="list"
          aria-labelledby="downshift-15-label"
          autocomplete="off"
          class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input Input-input"
          id="downshift-15-input"
          placeholder="Croatia"
          type="text"
          value="Croatia"
        />
      </div>
      <div
        aria-labelledby="downshift-15-label"
        id="downshift-15-menu"
        role="listbox"
      />
    </div>
  </div>
</div>
`;

exports[`Autocomplete dynamic behavior on blur preselected option and random text entered when allowAny=true 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-13-label"
      class="Autocomplete-root Autocomplete-rootAuto"
      role="combobox"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root Input-root OutlinedInput-rootAuto"
      >
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
        <input
          aria-autocomplete="list"
          aria-labelledby="downshift-13-label"
          autocomplete="off"
          class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input Input-input"
          id="downshift-13-input"
          placeholder="Placeholder text"
          type="text"
          value="random text"
        />
      </div>
      <div
        aria-labelledby="downshift-13-label"
        id="downshift-13-menu"
        role="listbox"
      />
    </div>
  </div>
</div>
`;

exports[`Autocomplete dynamic behavior on focus with preselection 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-labelledby="downshift-9-label"
      aria-owns="downshift-9-menu"
      class="Autocomplete-root Autocomplete-rootAuto"
      role="combobox"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root Input-root OutlinedInput-rootAuto"
      >
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
        <input
          aria-activedescendant="downshift-9-item-0"
          aria-autocomplete="list"
          aria-controls="downshift-9-menu"
          aria-labelledby="downshift-9-label"
          autocomplete="off"
          class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input Input-input"
          id="downshift-9-input"
          placeholder="Belarus"
          type="text"
          value=""
        />
      </div>
      <div
        aria-labelledby="downshift-9-label"
        id="downshift-9-menu"
        role="listbox"
      >
        <ul
          class="MuiList-root ScrollMenu-menu"
          role="menu"
          tabindex="-1"
        >
          <div
            class="ScrollMenu-scrollView"
          >
            <li
              aria-disabled="true"
              aria-selected="true"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light Mui-selected MenuItem-selected MuiMenuItem-gutters MuiListItem-gutters Mui-disabled MuiListItem-button Mui-selected Mui-disabled"
              id="downshift-9-item-0"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Belarus
              </p>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              id="downshift-9-item-1"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Croatia
              </p>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              id="downshift-9-item-2"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Lithuania
              </p>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              id="downshift-9-item-3"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Slovakia
              </p>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              id="downshift-9-item-4"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Ukraine
              </p>
            </li>
          </div>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Autocomplete dynamic behavior on focus without preselection 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-labelledby="downshift-7-label"
      aria-owns="downshift-7-menu"
      class="Autocomplete-root Autocomplete-rootAuto"
      role="combobox"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root Input-root OutlinedInput-rootAuto"
      >
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
        <input
          aria-activedescendant="downshift-7-item-0"
          aria-autocomplete="list"
          aria-controls="downshift-7-menu"
          aria-labelledby="downshift-7-label"
          autocomplete="off"
          class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input Input-input"
          id="downshift-7-input"
          type="text"
          value=""
        />
      </div>
      <div
        aria-labelledby="downshift-7-label"
        id="downshift-7-menu"
        role="listbox"
      >
        <ul
          class="MuiList-root ScrollMenu-menu"
          role="menu"
          tabindex="-1"
        >
          <div
            class="ScrollMenu-scrollView"
          >
            <li
              aria-disabled="false"
              aria-selected="true"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light Mui-selected MenuItem-selected MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button Mui-selected"
              id="downshift-7-item-0"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Belarus
              </p>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              id="downshift-7-item-1"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Croatia
              </p>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              id="downshift-7-item-2"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Lithuania
              </p>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              id="downshift-7-item-3"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Slovakia
              </p>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              id="downshift-7-item-4"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Ukraine
              </p>
            </li>
          </div>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Autocomplete dynamic behavior render options when start typing 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-labelledby="downshift-5-label"
      aria-owns="downshift-5-menu"
      class="Autocomplete-root Autocomplete-rootAuto"
      role="combobox"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root Input-root OutlinedInput-rootAuto"
      >
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
        <input
          aria-activedescendant="downshift-5-item-0"
          aria-autocomplete="list"
          aria-controls="downshift-5-menu"
          aria-labelledby="downshift-5-label"
          autocomplete="off"
          class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input Input-input"
          id="downshift-5-input"
          placeholder="Start typing here..."
          type="text"
          value="t"
        />
      </div>
      <div
        aria-labelledby="downshift-5-label"
        id="downshift-5-menu"
        role="listbox"
      >
        <ul
          class="MuiList-root ScrollMenu-menu"
          role="menu"
          tabindex="-1"
        >
          <div
            class="ScrollMenu-scrollView"
          >
            <li
              aria-disabled="false"
              aria-selected="true"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light Mui-selected MenuItem-selected MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button Mui-selected"
              id="downshift-5-item-0"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Croatia
              </p>
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              id="downshift-5-item-1"
              role="option"
              tabindex="-1"
            >
              <p
                class="MuiTypography-root Typography-bodyInherit Typography-inherit MenuItem-stringContent MuiTypography-body1"
              >
                Lithuania
              </p>
            </li>
          </div>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Autocomplete static behavior default render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-0-label"
      class="Autocomplete-root Autocomplete-rootAuto"
      role="combobox"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root Input-root OutlinedInput-rootAuto"
      >
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
        <input
          aria-autocomplete="list"
          aria-labelledby="downshift-0-label"
          autocomplete="off"
          class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input Input-input"
          id="downshift-0-input"
          placeholder="Start typing here..."
          type="text"
          value=""
        />
      </div>
      <div
        aria-labelledby="downshift-0-label"
        id="downshift-0-menu"
        role="listbox"
      />
    </div>
  </div>
</div>
`;

exports[`Autocomplete static behavior render option text when passed \`defaultValue\` prop 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-4-label"
      class="Autocomplete-root Autocomplete-rootAuto"
      role="combobox"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root Input-root OutlinedInput-rootAuto"
      >
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
        <input
          aria-autocomplete="list"
          aria-labelledby="downshift-4-label"
          autocomplete="off"
          class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input Input-input"
          id="downshift-4-input"
          placeholder="Lithuania"
          type="text"
          value="Lithuania"
        />
      </div>
      <div
        aria-labelledby="downshift-4-label"
        id="downshift-4-menu"
        role="listbox"
      />
    </div>
  </div>
</div>
`;

exports[`Autocomplete static behavior render option text when passed \`value\` prop 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-2-label"
      class="Autocomplete-root Autocomplete-rootAuto"
      role="combobox"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root Input-root OutlinedInput-rootAuto"
      >
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
        <input
          aria-autocomplete="list"
          aria-labelledby="downshift-2-label"
          autocomplete="off"
          class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input Input-input"
          id="downshift-2-input"
          placeholder="Ukraine"
          type="text"
          value="Ukraine"
        />
      </div>
      <div
        aria-labelledby="downshift-2-label"
        id="downshift-2-menu"
        role="listbox"
      />
    </div>
  </div>
</div>
`;
